Author: Girish Palya <girishji@gmail.com>
Date:   Sun, 09 May 2021 14:41:11 +0200

Improve readme


M  README.Rmd
M  README.md

commit c4858e027b756be5804c003b7a362eb73e456ceb
Author: Girish Palya <girishji@gmail.com>
Date:   Sun May 9 14:39:29 2021 +0200

    Improve readme file
    
    M  .gitignore
    M  README.Rmd
    M  README.md

commit 3c338006726f088efffc8b990822ecd7fb098ac2
Author: Girish Palya <girishji@gmail.com>
Date:   Sun May 9 14:24:15 2021 +0200

    Improved readme file, and bug fixes
    
    M  .gitignore
    M  README.Rmd
    M  README.md
    M  selenium/sec13F.py
    M  soup/sec13F.py

commit 9e4b5d9ba54d00511aee6ddd988682c95c384631
Author: Girish Palya <girishji@gmail.com>
Date:   Sun May 9 07:19:21 2021 +0200

    Add README file, and filter CIKs
    
    Add a README file. Add option to scrape 13F of specific investment
      firms only (based on CIK). Include a .gitignore.
    
    A  .gitignore
    A  README.Rmd
    A  README.md
    M  selenium/sec13F.py
    M  soup/sec13F.py

commit 51fe89ba4225f57f22e360b278ac52b8f3f5a4cf
Author: Girish Palya <girishji@gmail.com>
Date:   Sat May 8 15:09:06 2021 +0200

    Add command line arguments and misc cleanup

commit eac6c243b400e187b289128d7dc2adefd10b5602
Author: Girish Palya <girishji@gmail.com>
Date:   Fri May 7 13:49:13 2021 +0200

    First commit