@@ -42,24 +42,24 @@ or a list of CIK numbers to include.
 ``` zsh
 python soup/sec13F.py -h
 
-## usage: sec13F.py [-h] [--year YEAR] [--quarter {1,2,3,4}] [--count COUNT]
-##                  [CIK [CIK ...]]
-## 
-## Scrape Form 13F-HR from SEC website and report current holdings of investment
-## firms
-## 
-## positional arguments:
-##   CIK                   central index key(s) (CIK) to filter, if specified
-##                         (default: None)
-## 
-## optional arguments:
-##   -h, --help            show this help message and exit
-##   --year YEAR, -y YEAR  year when report was filed (default: 2021)
-##   --quarter {1,2,3,4}, -q {1,2,3,4}
-##                         quarter (1-4) of year when report was filed (default:
-##                         1)
-##   --count COUNT, -c COUNT
-##                         maximum number of reports to parse (default: 2)
+#> usage: sec13F.py [-h] [--year YEAR] [--quarter {1,2,3,4}] [--count COUNT]
+#>                  [CIK [CIK ...]]
+#> 
+#> Scrape Form 13F-HR from SEC website and report current holdings of investment
+#> firms
+#> 
+#> positional arguments:
+#>   CIK                   central index key(s) (CIK) to filter, if specified
+#>                         (default: None)
+#> 
+#> optional arguments:
+#>   -h, --help            show this help message and exit
+#>   --year YEAR, -y YEAR  year when report was filed (default: 2021)
+#>   --quarter {1,2,3,4}, -q {1,2,3,4}
+#>                         quarter (1-4) of year when report was filed (default:
+#>                         1)
+#>   --count COUNT, -c COUNT
+#>                         maximum number of reports to parse (default: 2)
 ```
 
 **Scrapers in *scrapy* and *selenium* directories produce the same
@@ -78,24 +78,24 @@ Place the geckodriver executable where $PATH can find it.
 ``` zsh
 python selenium/sec13F.py -h
 
-## usage: sec13F.py [-h] [--year YEAR] [--quarter {1,2,3,4}] [--count COUNT]
-##                  [CIK [CIK ...]]
-## 
-## Scrape Form 13F-HR from SEC website and report current holdings of investment
-## firms
-## 
-## positional arguments:
-##   CIK                   central index key(s) (CIK) to filter, if specified
-##                         (default: None)
-## 
-## optional arguments:
-##   -h, --help            show this help message and exit
-##   --year YEAR, -y YEAR  year when report was filed (default: 2021)
-##   --quarter {1,2,3,4}, -q {1,2,3,4}
-##                         quarter (1-4) of year when report was filed (default:
-##                         1)
-##   --count COUNT, -c COUNT
-##                         maximum number of reports to parse (default: 2)
+#> usage: sec13F.py [-h] [--year YEAR] [--quarter {1,2,3,4}] [--count COUNT]
+#>                  [CIK [CIK ...]]
+#> 
+#> Scrape Form 13F-HR from SEC website and report current holdings of investment
+#> firms
+#> 
+#> positional arguments:
+#>   CIK                   central index key(s) (CIK) to filter, if specified
+#>                         (default: None)
+#> 
+#> optional arguments:
+#>   -h, --help            show this help message and exit
+#>   --year YEAR, -y YEAR  year when report was filed (default: 2021)
+#>   --quarter {1,2,3,4}, -q {1,2,3,4}
+#>                         quarter (1-4) of year when report was filed (default:
+#>                         1)
+#>   --count COUNT, -c COUNT
+#>                         maximum number of reports to parse (default: 2)
 ```
 
 ## Example
@@ -116,13 +116,13 @@ import pandas as pd
 brk2021 = pd.read_csv('brk_2021_1.csv')
 gr2021 = brk2021.groupby(['issuer', 'cusip']).agg({'value':'sum', 'quantity':'sum'})
 print(gr2021.sort_values('value', ascending=False).head())
-##                                           value    quantity
-## issuer                     cusip                           
-## APPLE INC                  037833100  117714016   887135554
-## BANK AMER CORP             060505104   30616150  1010100606
-## COCA COLA CO               191216100   21935999   400000000
-## AMERICAN EXPRESS CO        025816109   18331249   151610700
-## VERIZON COMMUNICATIONS INC 92343V104   12090703   205064263
+#>                                           value    quantity
+#> issuer                     cusip                           
+#> APPLE INC                  037833100  117714016   887135554
+#> BANK AMER CORP             060505104   30616150  1010100606
+#> COCA COLA CO               191216100   21935999   400000000
+#> AMERICAN EXPRESS CO        025816109   18331249   151610700
+#> VERIZON COMMUNICATIONS INC 92343V104   12090703   205064263
 ```
 
 Similarly, top holdings as of the 4th quarter of 2020 are as follows.
@@ -138,13 +138,13 @@ import pandas as pd
 brk2020 = pd.read_csv('brk_2020_4.csv')
 gr2020 = brk2020.groupby(['issuer', 'cusip']).agg({'value':'sum', 'quantity':'sum'})
 print(gr2020.sort_values('value', ascending=False).head())
-##                                    value    quantity
-## issuer              cusip                           
-## APPLE INC           037833100  109358868   944295554
-## BANK AMER CORP      060505104   24333323  1010100606
-## COCA COLA CO        191216100   19748000   400000000
-## AMERICAN EXPRESS CO 025816109   15198971   151610700
-## KRAFT HEINZ CO      500754106    9752763   325634818
+#>                                    value    quantity
+#> issuer              cusip                           
+#> APPLE INC           037833100  109358868   944295554
+#> BANK AMER CORP      060505104   24333323  1010100606
+#> COCA COLA CO        191216100   19748000   400000000
+#> AMERICAN EXPRESS CO 025816109   15198971   151610700
+#> KRAFT HEINZ CO      500754106    9752763   325634818
 ```
 
 It is apparent that they have sold 57160000 shares (6%) of Apple and
